syntax = "proto3";

package posts;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = ".;proto";

service Posts {
    rpc Get(GetRequest) returns (GetResponse){
        option (google.api.http) = {
            get: "/posts"
        };
    }

    rpc List(ListRequest) returns (ListResponse){
        option (google.api.http) = {
          get: "/posts/list"
        };
    }

    rpc Create(CreateRequest) returns (Post){
        option (google.api.http) = {
          post: "/posts"
          body: "*"
        };
    }

    rpc Update(UpdateRequest) returns (Post){
        option (google.api.http) = {
          patch: "/posts"
          body: "*"
        };
    }

    rpc Delete(DeleteRequest) returns (DeleteResponse){
        option (google.api.http) = {
          delete: "/posts"
        };
    }
} 

message Post {
    int64 id = 1;
    string title = 2;
    string content = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    Post post = 1;
}

message ListRequest {
    int64 limit = 1;
    int64 offset = 2;
  }
  
  message ListResponse {
    repeated Post posts = 1;
}

message CreateRequest {
    string title = 1;
    string content = 2;
}

message UpdateRequest {
    int64 id = 1;
    string title = 2;
    string content = 3;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    bool success = 1;
}